[package]
name = "kvs"
version = "0.1.0"
authors = ["Ann Cisneros <ann.cisneros1@gmail.com>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependiencies]

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
